# sqlx-demo

./: README.md
step_1_migration/: README.md
step_2_insert/: README.md
step_2_insert/src/: main.rs
step_3_select/: README.md
step_3_select/migrations/: 20231103201110_create_authors.sql
step_3_select/src/: main.rs
step_4_update/: README.md
step_4_update/migrations/: 20231103201145_create_books.sql
step_4_update/src/: main.rs
step_5_delete/: .env  Cargo.toml  README.md
step_5_delete/src/: main.rs
step_6_join/: README.md
step_6_join/src/: main.rs
